# linguaggio-C

./: .gitignore  CMakeLists.txt  CONVENZIONI.md  README.md
01-introduzione/01-hello-world/: 010-hello-world.c  020-struttura-programma.c  030-commenti.c  040-problema-saluto-personalizzato-analisi.md  040-problema-saluto-personalizzato.c  050-problema-biglietto-da-visita-analisi.md  050-problema-biglietto-da-visita.c  060-problema-intestazione-documento-analisi.md  060-problema-intestazione-documento.c  CMakeLists.txt  README.md
01-introduzione/02-variabili-e-tipi/: 010-tipi-interi.c  020-tipi-reali.c  030-caratteri-e-booleani.c  040-costanti.c  050-problema-conversione-temperature-analisi.md  050-problema-conversione-temperature.c  060-problema-calcolo-area-analisi.md  060-problema-calcolo-area.c  070-problema-scheda-prodotto-analisi.md  070-problema-scheda-prodotto.c  CMakeLists.txt  README.md
01-introduzione/03-input-output/: 010-printf-basi.c  020-scanf-basi.c  030-formattazione-avanzata.c  040-problema-scheda-studente-analisi.md  040-problema-scheda-studente.c  050-problema-scontrino-analisi.md  050-problema-scontrino.c  060-problema-dati-veicolo-analisi.md  060-problema-dati-veicolo.c  CMakeLists.txt  README.md
01-introduzione/04-operatori/: 010-operatori-aritmetici.c  020-operatori-relazionali-e-logici.c  030-operatori-di-assegnazione.c  040-operatori-bit-a-bit.c  050-problema-calcolo-bolletta-analisi.md  050-problema-calcolo-bolletta.c  060-problema-indice-massa-corporea-analisi.md  060-problema-indice-massa-corporea.c  070-problema-cambio-valuta-analisi.md  070-problema-cambio-valuta.c  CMakeLists.txt  README.md
03-funzioni/01-definizione-e-chiamata/: 010-prima-funzione.c  020-prototipo.c  030-funzioni-void.c  040-problema-menu-ristorante-analisi.md  040-problema-menu-ristorante.c  050-problema-ricevuta-cassa-analisi.md  050-problema-ricevuta-cassa.c  060-problema-disegno-forme-analisi.md  060-problema-disegno-forme.c  CMakeLists.txt  README.md
03-funzioni/02-parametri-e-return/: 010-parametri-per-valore.c  020-valore-di-ritorno.c  030-parametri-multipli.c  040-problema-calcolatrice-analisi.md  040-problema-calcolatrice.c  050-problema-conversione-unita-analisi.md  050-problema-conversione-unita.c  060-problema-analisi-voti-analisi.md  060-problema-analisi-voti.c  CMakeLists.txt  README.md
03-funzioni/03-passaggio-per-riferimento/: 010-introduzione-ai-puntatori.c  020-modifica-tramite-puntatore.c  030-parametri-misti.c  040-problema-scambio-valori-analisi.md  040-problema-scambio-valori.c  050-problema-minmax-analisi.md  050-problema-minmax.c  060-problema-divisione-intera-analisi.md  060-problema-divisione-intera.c  CMakeLists.txt  README.md
03-funzioni/04-scope-e-visibilita/: 010-variabili-locali.c  020-variabili-globali.c  030-shadowing.c  040-problema-contatore-chiamate-analisi.md  040-problema-contatore-chiamate.c  050-problema-temperatura-giornaliera-analisi.md  050-problema-temperatura-giornaliera.c  060-problema-validazione-input-analisi.md  060-problema-validazione-input.c  CMakeLists.txt  README.md
04-array-e-stringhe/01-array-monodimensionali/01-dichiarazione-e-inizializzazione/: 010-dichiarazione-base  010-dichiarazione-base.c  020-inizializzazione.c  030-array-in-memoria.c  040-problema-lancio-dado-analisi.md  040-problema-lancio-dado.c  050-problema-distribuzione-voti-analisi.md  050-problema-distribuzione-voti.c  060-problema-registro-voti-analisi.md  060-problema-registro-voti.c  070-problema-inventario-magazzino-analisi.md  070-problema-inventario-magazzino.c  080-problema-temperature-settimanali-analisi.md  080-problema-temperature-settimanali.c  CMakeLists.txt  README.md
04-array-e-stringhe/01-array-monodimensionali/02-accesso-e-scorrimento/: 010-accesso-per-indice.c  020-scorrimento-con-cicli.c  030-lettura-da-tastiera.c  040-problema-rilevazioni-pluviometriche-analisi.md  040-problema-rilevazioni-pluviometriche.c  050-problema-cassa-automatica-analisi.md  050-problema-cassa-automatica.c  060-problema-rubrica-telefonica-analisi.md  060-problema-rubrica-telefonica.c  070-problema-sensori-industriali-analisi.md  070-problema-sensori-industriali.c  080-problema-questionario-analisi.md  080-problema-questionario.c  CMakeLists.txt  README.md
04-array-e-stringhe/01-array-monodimensionali/03-operazioni-su-array/: 010-somma-e-media.c  020-minimo-massimo-e-ricerca.c  030-trasformazione-elementi.c  040-problema-andamento-borsa-analisi.md  040-problema-andamento-borsa.c  050-problema-contatore-caratteri-analisi.md  050-problema-contatore-caratteri.c  060-problema-classifica-gara-analisi.md  060-problema-classifica-gara.c  070-problema-paghe-dipendenti-analisi.md  070-problema-paghe-dipendenti.c  080-problema-rilevamento-traffico-analisi.md  080-problema-rilevamento-traffico.c  CMakeLists.txt
04-array-e-stringhe/01-array-monodimensionali/04-array-e-funzioni/: 010-passaggio-array-a-funzione.c  020-funzioni-su-array.c  030-funzioni-che-modificano-array.c  040-problema-normalizzazione-misure-analisi.md  040-problema-normalizzazione-misure.c  050-problema-cifrario-cesare-analisi.md  050-problema-cifrario-cesare.c  060-problema-gestione-magazzino-analisi.md  060-problema-gestione-magazzino.c  070-problema-analisi-partita-analisi.md  070-problema-analisi-partita.c  080-problema-registro-presenze-analisi.md  080-problema-registro-presenze.c  CMakeLists.txt
04-array-e-stringhe/01-array-monodimensionali/05-array-a-tappo/: 010-introduzione-al-tappo.c  020-operazioni-con-tappo.c  030-tappo-su-array-di-char.c  040-problema-lista-della-spesa-analisi.md  040-problema-lista-della-spesa.c  050-problema-log-eventi-analisi.md  050-problema-log-eventi.c  060-problema-coda-prenotazioni-analisi.md  060-problema-coda-prenotazioni.c  070-problema-sensori-attivi-analisi.md  070-problema-sensori-attivi.c  080-problema-playlist-musicale-analisi.md  080-problema-playlist-musicale.c  CMakeLists.txt
04-array-e-stringhe/03-stringhe/01-dichiarazione-e-inizializzazione/: 010-stringa-base  010-stringa-base.c  020-inizializzazione  020-inizializzazione.c  040-problema-reale  (+12 more)
(+36 files in other folders)
