cmake_minimum_required(VERSION 3.20)

add_executable(010-hello-world                   010-hello-world.c)
add_executable(020-struttura-programma           020-struttura-programma.c)
add_executable(030-commenti                      030-commenti.c)
add_executable(040-problema-saluto-personalizzato 040-problema-saluto-personalizzato.c)
add_executable(050-problema-biglietto-da-visita  050-problema-biglietto-da-visita.c)
add_executable(060-problema-intestazione-documento 060-problema-intestazione-documento.c)
