cmake_minimum_required(VERSION 3.20)

add_executable(010-tipi-interi                    010-tipi-interi.c)
add_executable(020-tipi-reali                     020-tipi-reali.c)
add_executable(030-caratteri-e-booleani           030-caratteri-e-booleani.c)
add_executable(040-costanti                       040-costanti.c)
add_executable(050-problema-conversione-temperature 050-problema-conversione-temperature.c)
add_executable(060-problema-calcolo-area          060-problema-calcolo-area.c)
add_executable(070-problema-scheda-prodotto       070-problema-scheda-prodotto.c)
