cmake_minimum_required(VERSION 3.20)

add_executable(010-printf-basi                010-printf-basi.c)
add_executable(020-scanf-basi                 020-scanf-basi.c)
add_executable(030-formattazione-avanzata     030-formattazione-avanzata.c)
add_executable(040-problema-scheda-studente   040-problema-scheda-studente.c)
add_executable(050-problema-scontrino         050-problema-scontrino.c)
add_executable(060-problema-dati-veicolo      060-problema-dati-veicolo.c)
