cmake_minimum_required(VERSION 3.20)

add_executable(010-operatori-aritmetici            010-operatori-aritmetici.c)
add_executable(020-operatori-relazionali-e-logici  020-operatori-relazionali-e-logici.c)
add_executable(030-operatori-di-assegnazione       030-operatori-di-assegnazione.c)
add_executable(040-operatori-bit-a-bit             040-operatori-bit-a-bit.c)
add_executable(050-problema-calcolo-bolletta       050-problema-calcolo-bolletta.c)
add_executable(060-problema-indice-massa-corporea  060-problema-indice-massa-corporea.c)
add_executable(070-problema-cambio-valuta          070-problema-cambio-valuta.c)
