cmake_minimum_required(VERSION 3.20)

add_executable(03-01-010-prima-funzione          010-prima-funzione.c)
add_executable(03-01-020-prototipo               020-prototipo.c)
add_executable(03-01-030-funzioni-void           030-funzioni-void.c)
add_executable(03-01-040-menu-ristorante         040-problema-menu-ristorante.c)
add_executable(03-01-050-ricevuta-cassa          050-problema-ricevuta-cassa.c)
add_executable(03-01-060-disegno-forme           060-problema-disegno-forme.c)
