cmake_minimum_required(VERSION 3.20)

add_executable(03-02-010-parametri-per-valore    010-parametri-per-valore.c)
add_executable(03-02-020-valore-di-ritorno       020-valore-di-ritorno.c)
add_executable(03-02-030-parametri-multipli      030-parametri-multipli.c)
add_executable(03-02-040-calcolatrice            040-problema-calcolatrice.c)
add_executable(03-02-050-conversione-unita       050-problema-conversione-unita.c)
add_executable(03-02-060-analisi-voti            060-problema-analisi-voti.c)
