cmake_minimum_required(VERSION 3.20)

add_executable(03-03-010-introduzione-ai-puntatori   010-introduzione-ai-puntatori.c)
add_executable(03-03-020-modifica-tramite-puntatore  020-modifica-tramite-puntatore.c)
add_executable(03-03-030-parametri-misti             030-parametri-misti.c)
add_executable(03-03-040-scambio-valori              040-problema-scambio-valori.c)
add_executable(03-03-050-minmax                      050-problema-minmax.c)
add_executable(03-03-060-divisione-intera            060-problema-divisione-intera.c)
