cmake_minimum_required(VERSION 3.20)

add_executable(03-04-010-variabili-locali              010-variabili-locali.c)
add_executable(03-04-020-variabili-globali             020-variabili-globali.c)
add_executable(03-04-030-shadowing                     030-shadowing.c)
add_executable(03-04-040-contatore-chiamate            040-problema-contatore-chiamate.c)
add_executable(03-04-050-temperatura-giornaliera       050-problema-temperatura-giornaliera.c)
add_executable(03-04-060-validazione-input             060-problema-validazione-input.c)
