cmake_minimum_required(VERSION 3.20)

# Un target eseguibile per ciascun file .c dell'esempio.

add_executable(02-010-output-stringhe           010-output-stringhe.c)
add_executable(02-020-input-con-scanf           020-input-con-scanf.c)
add_executable(02-030-input-con-fgets           030-input-con-fgets.c)
add_executable(02-040-input-output-combinati    040-input-output-combinati.c)
add_executable(02-050-problema-registro-presenze 050-problema-registro-presenze.c)
add_executable(02-060-problema-messaggio-sms    060-problema-messaggio-sms.c)
add_executable(02-070-problema-inserimento-prodotto 070-problema-inserimento-prodotto.c)
add_executable(02-080-problema-log-sistema      080-problema-log-sistema.c)
