cmake_minimum_required(VERSION 3.20)

# Un target eseguibile per ciascun file .c dell'esempio.

add_executable(03-010-lunghezza-manuale               010-lunghezza-manuale.c)
add_executable(03-020-accesso-per-indice              020-accesso-per-indice.c)
add_executable(03-030-scansione-con-ciclo             030-scansione-con-ciclo.c)
add_executable(03-040-confronto-carattere-per-carattere 040-confronto-carattere-per-carattere.c)
add_executable(03-050-problema-conta-occorrenze       050-problema-conta-occorrenze.c)
add_executable(03-060-problema-conta-vocali           060-problema-conta-vocali.c)
add_executable(03-070-problema-validazione-password   070-problema-validazione-password.c)
add_executable(03-080-problema-analisi-testo          080-problema-analisi-testo.c)
add_executable(03-090-problema-verifica-iban          090-problema-verifica-iban.c)
add_executable(03-100-problema-censura-testo          100-problema-censura-testo.c)
